Saving recipes working. Previewing recipes that are saved or not saved, that are loading from database or spoonacular working

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,6 +31,12 @@
 <meta name="msapplication-config" content="/static/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 
+<style type="text/css" media="print">
+.lb1{
+display:none;
+}
+</style>
+
 </head>
 <body>
 <!-- Modals -->
