--- a/app/templates/profiles/party_profile.html
+++ b/app/templates/profiles/party_profile.html
@@ -232,6 +232,8 @@
                 
                 <div class='recipes'>
                     <div id="recipes" style="padding-top: 1em">
+
+                    {% if collated_recipes %}
                         
                     {% from "_formhelpers.html" import render_field %}
                     <form action="{{ url_for('spoonacular.email_menu') }}" class="form form-horizontal" method="post" role="form" id="emailMenuForm">
@@ -240,6 +242,8 @@
                         <input type="submit" class="btn btn-sm btn-primary pull-right" value="Email Menu To Yourself">
                      </form>
                     <script src="{{ url_for('static', filename = 'js/emailMenu.js') }}" type="text/javascript"></script>
+                    {% else %}
+                    {% endif %}
 
                         <h3>Menu</h3>
                         <a href="{{  url_for('spoonacular.show_search_spoonacular')  }}" class="btn btn-info" role="button">Search for Recipes</a><br><br>
