--- a/app/templates/profiles/friend_profile_fixed.html
+++ b/app/templates/profiles/friend_profile_fixed.html
@@ -71,6 +71,38 @@
     </div>
 </div>
 
+<div class= "inviteModal">
+    <div class="modal fade" id="inviteModal" tabindex="-1" role="dialog" aria-labelledby="inviteModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="inviteModalLabel">Invite Friend to Upcoming Parties</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class = "row round_hidden_div" style="padding-top: 2em">
+
+                 <span class="text-muted">Select all parties you want to add this friend to.<br><br>Deselecting a checkbox removes this friend from that party.<br><br></span>
+
+                {% if upcoming_parties %}
+                    {% from "_formhelpers.html" import render_field, render_no_label_field %}
+                    <form action="{{ url_for('profiles.invitetoparties') }}" class="form form-horizontal" method="post" role="form" id="inviteForm">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                        <input type="hidden" name="profileid" value="{{ friend_profile.profile_id }}"/>
+                        {{ render_field(inviteform.parties) }}
+                        <input type="submit" class="btn btn-sm btn-info" value="Submit">&ensp;<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Cancel</button>
+                    </form>
+                {% else %}
+                <span class="text-warning">Whoops! Looks like you need to add some parties before you can invite guests</span>
+                {% endif %}
+                </div>
+            </div>
+            <script src="{{ url_for('static', filename = 'js/inviteFriendToParties.js') }}" type="text/javascript"></script>
+        </div>
+    </div>
+</div>
+
 <!-- Begin Content -->
 
 <h1 class="text-left" style="padding-left: 3em">{% if friend_profile.first_name is not none %}{{ friend_profile.first_name }} {{  friend_profile.last_name  }}'s
@@ -172,6 +204,15 @@
 
         <div class="col-md-5 col-md-offset-1">      
             <div class = "row round_div" style="padding-top: 2em">
+
+
+                {% if upcoming_parties %}
+
+                    <button type="button" class="btn btn-sm btn-info pull-right" data-toggle="modal" data-target="#inviteModal">
+                    Manage invitations
+                    </button>
+
+                {% endif %}
 
                 <h3>Upcoming Parties Invited:</h3>
 
